[package]
name = "seoulmetrogtfs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.18"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
tokio = { version = "1", features = ["full"] }
osmpbfreader = "0.16"
